package tp.empleados.interfaz;

public interface Construccion {

    public String construir();

}